--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       font: inherit; 
       vertical-align: baseline;
       background:transparent;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     body{
       overflow:hidden;
